--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,14 @@
-.App {
-  text-align: center;
+@import "./styles/reset.min.css";
+@import "./styles/home.css";
+
+body {
+    /* background-color: #100e17; */
+    background-color: #63d471;
+    background-image: linear-gradient(315deg, #011d05 0%, #100e17 74%);
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+    width: 1280px;
+    margin: 0 auto;
 }
