navbar + home page styling + concept home page

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 /* background-color: #22282c body's background
 second background color: #22282c
 background color input form : #354147
-button color: #D84A3B */
+button orange color: #D84A3B */
 
 body {
     /* background-color: #100e17; */
