--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -53,7 +53,7 @@
 
 .user-space {
     display: flex;
-    margin-top: 40px;
+    margin-top: 10%;
     justify-content: space-evenly;
     width: 100%
 }
