--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 @import "./styles/home.css";
 @import url('https://fonts.googleapis.com/css?family=Poppins');
 
-/* background-color: #22282c body's background
+/* background-color: #1c2023 body's background
 second background color: #22282c
 background color input form : #354147
 button orange color: #D84A3B */
