--- a/src/styles/scanTicket.css
+++ b/src/styles/scanTicket.css
@@ -32,6 +32,8 @@ button {
 .scanTicket-section {
   display: flex;
   flex-direction: row;
+  width: 1280px;
+  margin: 0 auto;
 }
 .scanTicket-left {
   display: flex;
