--- a/src/styles/recipeCardXl.css
+++ b/src/styles/recipeCardXl.css
@@ -2,6 +2,124 @@
   color: white
 }
 
+.recipe-container ul {
+  margin: 0;
+  padding: 0;
+}
+
+.recipe-container {
+  margin-top: 80px;
+}
+
 .recipe-img img {
-  height: 350px
+  height: 350px;
+  -webkit-box-shadow: -1px -4px 21px -2px rgba(216,74,59,0.56);
+  -moz-box-shadow: -1px -4px 21px -2px rgba(216,74,59,0.56);
+  box-shadow: -1px -4px 21px -2px rgba(216,74,59,0.56);
+  margin-bottom: 20px;
+}
+
+.recipe-top-left-section {
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+}
+
+.recipe-tags {
+  width: 75%
+}
+
+.recipe-tags li {
+  display :flex;
+}
+
+.recipe-top-section {
+  display: flex;
+  background-color: #22282c;
+  padding: 30px;
+  -webkit-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  -moz-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  margin-bottom: 40px;
+}
+
+.recipe-title h1 {
+  line-height: 32px;
+  font-size: 32px;
+  color: #D84A3B;
+  margin-bottom: 20px
+}
+
+.recipe-timer {
+  display: flex;
+  flex-direction: column;
+}
+
+#timer {
+  font-size: 50px;
+  line-height: 50px;
+}
+
+#minutes {
+  font-size: 20px
+}
+
+.info-timer-rating {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
+.recipe-bottom-section {
+  background-color: #22282c;
+  padding: 30px;
+  -webkit-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  -moz-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  margin-bottom: 50px;
+}
+
+.recipe-bottom {
+  display: flex;
+}
+
+.recipe-desc {
+  text-align: justify;
+  width: 65%
+}
+
+.recipe-desc h2 {
+  margin-bottom: 30px;
+  color: #D84A3B;
+}
+
+.recipe-review {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.btn-add-review {
+  padding: 20px 60px;
+}
+
+.recipe-bottom {
+  display: flex;
+  width: 100%
+}
+
+.recipe-steps {
+  background-color: #354147;
+  margin-left : 40px;
+  padding-top: 20px;
+  padding-left: 30px;
+  width: 30%
+}
+
+.recipe-steps h2 {
+  color: #D84A3B;
+  /* margin-left: 20px */
+
 }
