--- a/src/styles/user-form.css
+++ b/src/styles/user-form.css
@@ -16,6 +16,8 @@ input {
     height: 40px;
     background-color: #354147;
     border: none;
+    color: white;
+    padding-left: 15px;
 }
 
 .button {
