--- a/src/styles/recipeCardXl.css
+++ b/src/styles/recipeCardXl.css
@@ -1,5 +1,5 @@
 .recipe-container {
-  color: white
+  color: white;
 }
 
 .recipe-container ul {
@@ -13,9 +13,9 @@
 
 .recipe-img img {
   height: 350px;
-  -webkit-box-shadow: -1px -4px 21px -2px rgba(216,74,59,0.56);
-  -moz-box-shadow: -1px -4px 21px -2px rgba(216,74,59,0.56);
-  box-shadow: -1px -4px 21px -2px rgba(216,74,59,0.56);
+  -webkit-box-shadow: -1px -4px 21px -2px rgba(216, 74, 59, 0.56);
+  -moz-box-shadow: -1px -4px 21px -2px rgba(216, 74, 59, 0.56);
+  box-shadow: -1px -4px 21px -2px rgba(216, 74, 59, 0.56);
   margin-bottom: 20px;
 }
 
@@ -26,28 +26,28 @@
 }
 
 .recipe-tags {
-  width: 75%
+  width: 75%;
 }
 
 .recipe-tags li {
-  display :flex;
+  /* display: flex; */
 }
 
 .recipe-top-section {
   display: flex;
   background-color: #22282c;
   padding: 30px;
-  -webkit-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
-  -moz-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
-  box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  -webkit-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
+  -moz-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
+  box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
   margin-bottom: 40px;
 }
 
 .recipe-title h1 {
   line-height: 32px;
   font-size: 32px;
-  color: #D84A3B;
-  margin-bottom: 20px
+  color: #d84a3b;
+  margin-bottom: 20px;
 }
 
 .recipe-timer {
@@ -61,7 +61,7 @@
 }
 
 #minutes {
-  font-size: 20px
+  font-size: 20px;
 }
 
 .info-timer-rating {
@@ -71,13 +71,21 @@
   justify-content: space-around;
   margin-bottom: 50px;
 }
+.recipe-rating {
+  display: flex;
+  flex-direction: column;
+}
+
+.clickable-stars {
+  font-size: 2rem;
+}
 
 .recipe-bottom-section {
   background-color: #22282c;
   padding: 30px;
-  -webkit-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
-  -moz-box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
-  box-shadow: 1px 0px 34px 12px rgba(34,40,44,0.62);
+  -webkit-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
+  -moz-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
+  box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
   margin-bottom: 50px;
 }
 
@@ -87,12 +95,12 @@
 
 .recipe-desc {
   text-align: justify;
-  width: 65%
+  width: 65%;
 }
 
 .recipe-desc h2 {
   margin-bottom: 30px;
-  color: #D84A3B;
+  color: #d84a3b;
 }
 
 .recipe-review {
@@ -107,19 +115,18 @@
 
 .recipe-bottom {
   display: flex;
-  width: 100%
+  width: 100%;
 }
 
 .recipe-steps {
   background-color: #354147;
-  margin-left : 40px;
+  margin-left: 40px;
   padding-top: 20px;
   padding-left: 30px;
-  width: 30%
+  width: 30%;
 }
 
 .recipe-steps h2 {
-  color: #D84A3B;
+  color: #d84a3b;
   /* margin-left: 20px */
-
 }
