--- a/src/styles/recipeCardXl.css
+++ b/src/styles/recipeCardXl.css
@@ -28,6 +28,10 @@
 .recipe-tags {
   width: 80%
 }
+
+.recipe-tags h2{
+  color: #d84a3b
+}
 .recipe-tags ul {
   display: flex;
   width: 75%;
@@ -112,8 +116,12 @@
   width: 65%;
 }
 
+.recipe-desc p {
+  line-height: 30px;
+}
+
 .recipe-desc h2 {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   color: #d84a3b;
 }
 
@@ -123,7 +131,7 @@
   justify-content: center;
 }
 
-#btn-add-review {
+/* #btn-add-review {
   margin-top: 30px;
   margin-bottom: 20px;
   padding: 20px 70px;
@@ -131,7 +139,7 @@
   color: white;
   border: none;
   font-size: 20px;
-}
+} */
 
 .recipe-bottom {
   display: flex;
@@ -144,6 +152,17 @@
   padding-top: 20px;
   padding-left: 30px;
   width: 30%;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+
+.recipe-steps h2 {
+  margin-bottom: 20px;
+}
+
+.recipe-steps li {
+  margin-bottom: 10px;
+  justify-content: justify;
 }
 
 .recipe-steps h2 {
