--- a/src/styles/rating.css
+++ b/src/styles/rating.css
@@ -1,3 +1,94 @@
+.review-area {
+    width: 100%;
+    display: flex;
+    background-color: #22282c;
+    -webkit-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
+    -moz-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
+    box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
+    margin-bottom: 40px;
+}
+
+#id-review {
+    display: flex;
+    justify-content: center;
+    color: white;
+    margin: 0 auto;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.form-review label {
+    font-size: 20px;
+}
+
+.left-side {
+    background-color: #354147;
+    padding: 30px;
+    width: 40%
+}
+
+.review-area {
+    padding: 30px
+}
+
+.textArea {
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    border-radius: 5px;
+    color: white;
+    background-color: #22282c;
+    border: 1px solid #354147;
+    -webkit-box-shadow: -1px -4px 21px -2px rgba(216, 74, 59, 0.56);
+    -moz-box-shadow: -1px -4px 21px -2px rgba(216, 74, 59, 0.56);
+    box-shadow: -1px -4px 21px -2px rgba(216, 74, 59, 0.56);
+}
+
+.button-rate {
+    display: flex;
+    justify-content: center;
+}
+
+.btn-rate {
+    width: 60%;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    padding: 15px 50px;
+    background-color: #D84A3B;
+    color: white;
+    border: none;
+    font-size: 20px;
+}
+
+.rate-title {
+    color: #D84A3B;
+    font-size: 18px;
+    margin-bottom: 15px
+}
+
+.right-side {
+    background-color: #354147;
+    padding: 30px;
+    width: 60%;
+    margin-left: 80px;
+}
+
+.right-side li {
+    font-size: 20px;
+}
+
+.info-user-review {
+    padding: 30px;
+    background-color: #22282c;
+    color: white;
+    margin-right: 5%
+}
+
+.rating-area {
+    color: black
+}
+
 /* .review-area {
     display: flex;
     flex-direction: column;
@@ -8,7 +99,7 @@
     box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
     margin-bottom: 40px;
     width: 42%
-} */
+}
 
 .review-global-area {
     width: 22%;
@@ -61,4 +152,4 @@
 
 .review-client {
     display: flex;
-}
+} */
