--- a/src/styles/recipes.css
+++ b/src/styles/recipes.css
@@ -6,19 +6,20 @@
 }
 .recipes-container {
   display: flex;
-  width: 100vw;
+  width: 98vw;
   flex-wrap: wrap;
 }
 .recipes-element {
   display: flex;
   flex-direction: column;
-  margin-right: 30px;
-  margin-left: 30px;
-  width: 25%;
+  margin-right: 2vw;
+  margin-left: 2vw;
+  width: 20%;
   background-color: #22282c;
-  padding-right: 30px;
-  padding-left: 30px;
-  padding-bottom: 40px;
+  padding-right: 2vw;
+  padding-left: 2vw;
+  padding-bottom: 1vw;
+  margin-bottom: 5vw;
 
   -webkit-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
   -moz-box-shadow: 1px 0px 34px 12px rgba(34, 40, 44, 0.62);
